committee: fix member description styling
This commit adds flex-grow to the committee member description elements,
which means they will take up the maximum available width even if the
description text becomes too short to fill it.

--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -248,6 +248,10 @@ body {
   gap: 2rem;
 }
 
+.section__row-text {
+  flex-grow: 1;
+}
+
 .section__image {
   aspect-ratio: 1 / 1;
   max-width: 15rem;
